--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "phpmailer/phpmailer": "^6.5",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "symfony/webpack-encore-bundle": "^2.1"
     }
 }
